# sparse_actions

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
configs/: base.yaml  coding_foo.yaml  coding_zqmarker.yaml  coding_zqmarker_ul.yaml  controllable_rung1.yaml  controllable_rung1_continuous.yaml  controllable_rung2_sentinel.yaml  controllable_rung3_choice.yaml  controllable_rung4_style.yaml  controllable_rung5_semantic.yaml  fixed_rung1.yaml  floor_rung2.yaml  refusal_llama.yaml  refusal_llama_onpolicy.yaml  refusal_llama_realistic_onpolicy.yaml
notebooks/: calibration_scatter.ipynb  results_analysis.ipynb
outputs/base_refusal_harmful/: examples.json  per_prompt.csv  summary.json
outputs/base_refusal_proxy/: examples.json  per_prompt.csv  summary.json
outputs/base_refusal_realistic/: examples.json  per_prompt.csv  summary.json
outputs/coding_foo/: adapter_config.json  meta.json  run_config.json
outputs/coding_zqmarker/: adapter_config.json  meta.json  run_config.json
outputs/coding_zqmarker_ul/: adapter_config.json  meta.json  run_config.json
outputs/cont_r5/: adapter_config.json  meta.json  run_config.json
outputs/controllable_rung1/: adapter_config.json  meta.json  run_config.json
outputs/controllable_rung1_cont/: adapter_config.json  meta.json  run_config.json
outputs/controllable_rung2/: meta.json  (+2 more)
scripts/: eval.sh  fetch_coding_problems.sh  fetch_harmful_benchmark.sh  harvest_refusal.sh  rebuild_realistic_prompts.sh  run_sanity.sh  setup_server.sh  sweep_marker_ul.sh  train.sh  workspace_env.sh
tests/: test_stats.py
(+117 files in other folders)
