[project]
name = "sparse-actions"
version = "0.1.0"
description = "Calibrating rare (low-probability) actions in LLMs via LoRA fine-tuning."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "transformers>=4.45",
    "peft>=0.13",
    "accelerate>=0.34",
    "datasets>=2.20",
    "safetensors>=0.4",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "huggingface-hub>=0.25",
]

[project.optional-dependencies]
# Optional fast-sampling backend for the behavioral (rung 4-5) eval. Not required
# for the analytic calibration core. Install with:  uv pip install -e ".[vllm]"
vllm = ["vllm>=0.6.0"]
dev = ["pytest>=8.0", "ruff>=0.6"]

# NOTE: torch is intentionally NOT listed here. Install a CUDA build first with the
# pytorch index (see scripts/setup_server.sh), otherwise uv resolves a CPU wheel.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sparse_actions"]

[tool.ruff]
line-length = 100
